--- a/.github/workflows/build-data.yml
+++ b/.github/workflows/build-data.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.12'
       - run: pip install -r requirements.txt
       - run: python scripts/get_raw_release.py
-      - run: python scripts/build_datasets.py
+      - run: python scripts/build_trimester_panels.py
       - name: Commit processed data
         run: |
           git config user.name  "github-actions"
