--- a/.github/workflows/build-data.yml
+++ b/.github/workflows/build-data.yml
@@ -17,6 +17,7 @@ jobs:
       - run: pip install -r requirements.txt
       - run: python scripts/get_raw_release.py
       - run: python scripts/build_trimester_panels.py
+      - run: python scripts/totales_trimestre.py
       - name: Commit processed data
         run: |
           git config user.name  "github-actions"
