--- a/.github/workflows/build-data.yml
+++ b/.github/workflows/build-data.yml
@@ -15,9 +15,10 @@ jobs:
         with:
           python-version: '3.12'
       - run: pip install -r requirements.txt
-      - run: python -m scripts/descargar_csv_raw.py
-      - run: python -m scripts/construir_panel_microdatos.py
-      - run: python -m scripts/generar_agregados.py
+      - run: python -m scripts.descargar_csv_raw
+      - run: python -m scripts.construir_panel_microdatos
+      - run: python -m scripts.generar_totales_trimestrales
+      - run: python -m scripts.generar_series_mensuales_simplificadas
       - name: Commit processed data
         run: |
           git config user.name  "github-actions"
