--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ pyyaml>=6.0
 
 # Optional: in-process SQL analytics (duckdb.read_parquet, etc.)
 duckdb>=0.10
+
+# Markdown tables (pandas.to_markdown)
+tabulate>=0.9
